update composer config

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
 	"autoload": {
 		"psr-4": {
 			"yii2module\\lang\\": "src",
-			"yii2module\\lang\\tests\\": "tests"
+			"yii2module\\lang\\tests\\": "tests",
+			"yii2bundle\\lang\\": "src",
+			"yii2bundle\\lang\\tests\\": "tests"
 		}
 	},
 	"require": {
